@@ -112,7 +112,7 @@ bool PlaylistDock::save(const QString &_url, bool saveCurrentGroup)
 		if (tWI->parent())
 			entry.parent = parents.indexOf(tWI->parent()) + 1;
 		if (tWI == list->currentItem())
-			entry.flags |= Playlist::Entry::FlagSelected;
+			entry.flags |= Playlist::Entry::Selected;
 		entry.flags |= tWI->data(0, Qt::UserRole + 1).toInt(); //skip & stopAfter flags
 		entries += entry;
 	}
@@ -190,6 +190,19 @@ void PlaylistDock::expandTree(QTreeWidgetItem *i)
 	}
 }
 
+void PlaylistDock::toggleEntryFlag(const int flag)
+{
+	foreach (QTreeWidgetItem *tWI, list->selectedItems())
+	{
+		if (!list->isGroup(tWI))
+		{
+			const int entryFlags = tWI->data(0, Qt::UserRole + 1).toInt() ^ flag; //Toggle flag
+			PlaylistWidget::setEntryFont(tWI, entryFlags);
+			tWI->setData(0, Qt::UserRole + 1, entryFlags);
+		}
+	}
+}
+
 inline bool PlaylistDock::isRandomPlayback() const
 {
 	return (repeatMode == RandomMode || repeatMode == RandomGroupMode || repeatMode == RepeatRandom || repeatMode == RepeatRandomGroup);
@@ -239,16 +252,7 @@ void PlaylistDock::stopLoading()
 void PlaylistDock::next(bool playingError)
 {
 	QList<QTreeWidgetItem *> l = list->getChildren(PlaylistWidget::ONLY_NON_GROUPS);
-	if (lastPlaying->data(0, Qt::UserRole + 1).toInt() & Playlist::Entry::FlagStopAfter)
-	{
-		QFont font = lastPlaying->font(0);
-		font.setItalic(false);
-		lastPlaying->setFont(0, font);
-		lastPlaying->setData(0, Qt::UserRole + 1, lastPlaying->data(0, Qt::UserRole + 1).toInt() &~ Playlist::Entry::FlagStopAfter);
-		emit stop();
-		return;
-	}
-	if (!l.contains(lastPlaying))
+	if (lastPlaying && !l.contains(lastPlaying))
 		lastPlaying = NULL;
 	QTreeWidgetItem *tWI = NULL;
 	if (!l.isEmpty())
@@ -268,56 +272,76 @@ void PlaylistDock::next(bool playingError)
 				randomPlayedItems.clear();
 			if (!playedEverything || (repeatMode == RepeatRandom || (repeatMode == RepeatRandomGroup && !l.isEmpty())))
 			{
-				int r;
 				if (l.count() == 1)
-					r = 0;
-				else
+					tWI = l.at(0);
+				else do
 				{
-					do
-						r = qrand() % l.count();
-					while (lastPlaying == l.at(r) || randomPlayedItems.contains(l.at(r)));
-				}
-				tWI = l.at(r);
+					tWI = l.at(qrand() % l.count());
+					if (tWI->data(0, Qt::UserRole + 1).toInt() & Playlist::Entry::Skip)
+					{
+						//Don't play skipped item.
+						if (!randomPlayedItems.contains(tWI))
+							randomPlayedItems.append(tWI);
+						if (randomPlayedItems.count() == l.count())
+						{
+							//Break and stop playback if played everything ignoring skipped entries
+							tWI = NULL;
+							break;
+						}
+					}
+				} while (lastPlaying == tWI || randomPlayedItems.contains(tWI));
 			}
 		}
 		else
 		{
-			const bool canRepeat = sender() ? !qstrcmp(sender()->metaObject()->className(), "PlayClass") : false;
-			if (canRepeat && repeatMode == RepeatEntry) //loop track
-				tWI = lastPlaying ? lastPlaying : list->currentItem();
+			int entryFlags = lastPlaying ? lastPlaying->data(0, Qt::UserRole + 1).toInt() : 0;
+			if (entryFlags & Playlist::Entry::StopAfter)
+			{
+				//Remove "StopAfter" flag and stop playback.
+				entryFlags &= ~Playlist::Entry::StopAfter;
+				PlaylistWidget::setEntryFont(lastPlaying, entryFlags);
+				lastPlaying->setData(0, Qt::UserRole + 1, entryFlags);
+				//"tWI" is NULL here, so playback will stop.
+			}
 			else
 			{
-				QTreeWidgetItem *P = NULL;
-				if (!list->queue.size())
+				const bool canRepeat = sender() ? !qstrcmp(sender()->metaObject()->className(), "PlayClass") : false;
+				if (canRepeat && repeatMode == RepeatEntry) //loop track
+					tWI = lastPlaying ? lastPlaying : list->currentItem();
+				else
 				{
-					tWI = list->currentPlaying ? list->currentPlaying : list->currentItem();
-					P = tWI ? tWI->parent() : NULL;
-					expandTree(P);
-					for (;;)
+					QTreeWidgetItem *P = NULL;
+					if (!list->queue.size())
 					{
-						tWI = list->itemBelow(tWI);
-						if (canRepeat && repeatMode == RepeatGroup && P && (!tWI || tWI->parent() != P)) //loop group
+						tWI = list->currentPlaying ? list->currentPlaying : list->currentItem();
+						P = tWI ? tWI->parent() : NULL;
+						expandTree(P);
+						for (;;)
 						{
-							const QList<QTreeWidgetItem *> l2 = list->getChildren(PlaylistWidget::ONLY_NON_GROUPS, P);
-							if (!l2.isEmpty())
-								tWI = l2[0];
+							tWI = list->itemBelow(tWI);
+							if (canRepeat && repeatMode == RepeatGroup && P && (!tWI || tWI->parent() != P)) //loop group
+							{
+								const QList<QTreeWidgetItem *> l2 = list->getChildren(PlaylistWidget::ONLY_NON_GROUPS, P);
+								if (!l2.isEmpty())
+									tWI = l2[0];
+								break;
+							}
+							if (PlaylistWidget::isGroup(tWI)) //group
+							{
+								if (!tWI->isExpanded())
+									tWI->setExpanded(true);
+								continue;
+							}
+							if (tWI->data(0, Qt::UserRole + 1).toInt() & Playlist::Entry::Skip) //skip item
+								continue;
 							break;
 						}
-						if (PlaylistWidget::isGroup(tWI)) //group
-						{
-							if (!tWI->isExpanded())
-								tWI->setExpanded(true);
-							continue;
-						}
-						if (tWI->data(0, Qt::UserRole + 1).toInt() & Playlist::Entry::FlagSkip) //skip item
-							continue;
-						break;
 					}
+					else
+						tWI = list->queue.first();
+					if (canRepeat && (repeatMode == RepeatList || repeatMode == RepeatGroup) && !tWI && !l.isEmpty()) //loop list
+						tWI = l.at(0);
 				}
-				else
-					tWI = list->queue.first();
-				if (canRepeat && (repeatMode == RepeatList || repeatMode == RepeatGroup) && !tWI && !l.isEmpty()) //loop list
-					tWI = l.at(0);
 			}
 		}
 	}
@@ -353,31 +377,11 @@ void PlaylistDock::prev()
 }
 void PlaylistDock::skip()
 {
-	foreach (QTreeWidgetItem *tWI, list->selectedItems())
-	{
-		if (!list->isGroup(tWI))
-		{
-			int flags = tWI->data(0, Qt::UserRole + 1).toInt();
-			tWI->setData(0, Qt::UserRole + 1, flags ^ Playlist::Entry::FlagSkip); // invert skip bit
-			QFont font = tWI->font(0);
-			font.setStrikeOut(!(flags & Playlist::Entry::FlagSkip));
-			tWI->setFont(0, font);
-		}
-	}
+	toggleEntryFlag(Playlist::Entry::Skip);
 }
 void PlaylistDock::stopAfter()
 {
-	foreach (QTreeWidgetItem *tWI, list->selectedItems())
-	{
-		if (!list->isGroup(tWI))
-		{
-			int flags = tWI->data(0, Qt::UserRole + 1).toInt();
-			tWI->setData(0, Qt::UserRole + 1, flags ^ Playlist::Entry::FlagStopAfter); // invert stopAfter bit
-			QFont font = tWI->font(0);
-			font.setItalic(!(flags & Playlist::Entry::FlagStopAfter));
-			tWI->setFont(0, font);
-		}
-	}
+	toggleEntryFlag(Playlist::Entry::StopAfter);
 }
 void PlaylistDock::start()
 {
