@@ -1,6 +1,7 @@
 Changes in QMPlay2 build 17.01.14:
 	- fix updating covers (also title, artist and album outside QMPlay2) in network streams,
 	- equalizer improvements (presets must be set again),
+	- add "Skip" and "Stop after" flags for playlist,
 	- add Profiles (Zamarin Arthur),
 
 Changes in QMPlay2 build 16.12.23:
